# QEloquent

./: CMakeLists.txt  LICENSE  QEloquent.asta  Qloquent.asta  README.md
.github/workflows/: ci-cd.yml  ci-cd.yml.in
QEloquent/: global.h  migration.h  schema.h
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  connections.md  error_handling.md  introduction.md  model_definition.md  query_builder.md  relations.md  usage.md  utilities.md
examples/store/: CMakeLists.txt  main.cpp
examples/store/models/: model.h  product.cpp  product.h  sale.cpp  sale.h  user.cpp  user.h
examples/store/ui/: dashboardview.cpp  dashboardview.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  productcatalogview.cpp  productcatalogview.h  saleshistoryview.cpp  saleshistoryview.h  session.h
notes/: RELEASE-1.0.0.md
src/: CMakeLists.txt  QEloquentConfig.cmake.in
src/core/: CMakeLists.txt  connection.cpp  connection.h  driver.cpp  driver.h  driver_p.h  entity.cpp  entity.h  entity_p.h  global.h
src/generic/: CMakeLists.txt  genericmodel.cpp  genericmodel.h  genericmodel_p.h  genericmodelhelpers.cpp  genericmodelhelpers.h
src/meta/: CMakeLists.txt  metaobject.cpp  metaobject.h  metaobject_p.h  metaobjectbuilder.cpp  metaobjectbuilder.h  metaobjectgenerator.cpp  metaobjectgenerator.h  metaobjectregistry.cpp  metaobjectregistry.h  metaproperty.cpp  metaproperty.h  metaproperty_p.h  metarelation.cpp  metarelation.h  metatable.cpp  metatable.h  metatable_p.h  metatablebuilder_p.h  namingconvention.cpp  namingconvention.h
src/migration/: CMakeLists.txt  migration.cpp  migration.h  migration_p.h  migrator.cpp  migrator.h  migrator_p.h  schema.cpp  schema.h  tableblueprint.cpp  tableblueprint.h  tableblueprint_p.h
src/model/: CMakeLists.txt  genericmodel.h  genericmodel_p.h  modelerror.cpp  modelerror.h  modelinfo.cpp  modelinfo.h  modelinfo_p.h  modelinfobuilder.cpp  modelinfobuilder.h  modelquery.cpp  modelquery.h
src/models/: user.cpp  user.h
src/orm/: CMakeLists.txt  model.cpp  model.h  model_p.h  modelhelpers.h  relation.cpp  relation.h  relation_impl.h
src/query/: CMakeLists.txt  error.cpp  error.h  query.cpp  query.h  querybuilder.cpp  querybuilder.h  queryrunner.cpp  queryrunner.h
src/relation/: CMakeLists.txt  relationbase.cpp  relationbase.h
src/serialization/: CMakeLists.txt  deserializable.cpp  deserializable.h  serializable.cpp  serializable.h  serialization.h
src/serialization/serializers/: csvserializer_p.h  jsonserializer_p.h  yamlserializer_p.h
src/utils/: CMakeLists.txt  datamap.cpp  datamap.h  dictionary.cpp  dictionary.h  itemproxy.h  listproxy.h  namingconvention.cpp  namingconvention.h  namingconvention_p.h  querybuilder.cpp  querybuilder.h  queryrunner.cpp  queryrunner.h  result.h
test/: CMakeLists.txt  complexmodel.h  main.cpp  metadata.cpp  product.cpp  product.h  querygenerationtest.cpp  querygenerationtest.h  querygenerator.h  relationtest.cpp  relationtest.h  serialization.cpp  serialization.h  simplecrudtest.cpp  simplecrudtest.h  simplemodel.cpp  simplemodel.h  simplemodelstest.cpp  test.cpp  test.h  testmodel.cpp  testmodel.h  user.cpp
test/core/: mytest.cpp  mytest.h  test.cpp
test/models/: basemodel.h  complexmodels.cpp  complexmodels.h  invalidmodels.cpp  invalidmodels.h  product.cpp  product.h  sale.cpp  sale.h  simplemodels.cpp  simplemodels.h  testmodel.h  user.cpp  user.h  usergroup.cpp  usergroup.h
test/tmp/: simplecrudtest.cpp  simplecrudtest.h  simplemodelstest.h
test/tmp/models/: sale.cpp
testdata/eloquent/: application.json  comment.json  mechanic.json  migrate.sql  post.json  user.json
testdata/store/: Store.md  content.sql  product.json  structure.sql
tests/: CMakeLists.txt  complexmodel.cpp  metadata.h  querygenerator.cpp  serialization.cpp  serialization.h  simplemodel.cpp  simplemodel.h
tests/core/: mytest.cpp  mytest.h
